objects/Wow_Request_Form__c.object
<CustomObject>
    <description>To store presales support Wow Engagement information</description>
    <fields>
        <fullName>AE_Name__c</fullName>
        <label>AE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_AE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Opportunity_Id__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArchitectureBlueprints__c</fullName>
        <inlineHelpText>REQUIRED - Select the standard architecture blueprints used for this opportunity</inlineHelpText>
        <label>ArchitectureBlueprints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACD-Replacement Solution Blueprint</fullName>
                </value>
                <value>
                    <fullName>Avaya Replacement Blueprint</fullName>
                </value>
                <value>
                    <fullName>Digital Blueprint</fullName>
                </value>
                <value>
                    <fullName>Enterprise Workload Management Blueprint</fullName>
                </value>
                <value>
                    <fullName>WFO Solution Blueprint – Recording &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>WFO Solution Blueprint – Workforce management</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <label>AssignTo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Queue__c</fullName>
        <label>Assign Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Consultant</description>
        <label>Business Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <description>Business Partner comes from Opportunity</description>
        <label>Business Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ByPass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Team_Members__c</fullName>
        <label>Count Team Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Architecture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Architecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Use_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Use Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer name comes from opportunity</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSR_Open_Days__c</fullName>
        <formula>IF( ISPICKVAL(WoW_Status__c,&apos;Completed&apos;), LastModifiedDate - CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSR Open Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show whether it is migrated record or not</description>
        <label>Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Topology__c</fullName>
        <inlineHelpText>REQUIRED - Select the general deployment topology used</inlineHelpText>
        <label>Deployment Topology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Data Centre</fullName>
                </value>
                <value>
                    <fullName>Single Data Centre with local resiliency (HA)</fullName>
                </value>
                <value>
                    <fullName>Dual Data Centre with local resiliency (HA)</fullName>
                </value>
                <value>
                    <fullName>Dual Data Centre with business continuity and local resiliency (HA)</fullName>
                </value>
                <value>
                    <fullName>Multi Data Centre with local resiliency (HA)</fullName>
                </value>
                <value>
                    <fullName>Multi Data Centre with business continuity and local resiliency (HA)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you have performed Design Activities for this opportunity</inlineHelpText>
        <label>Design Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_End_Date__c</fullName>
        <inlineHelpText>REQUIRED - The date when you finished the last Design Activity</inlineHelpText>
        <label>Design End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Start_Date__c</fullName>
        <inlineHelpText>REQUIRED - The date when you started to work on Design Activities</inlineHelpText>
        <label>Design Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you performed Discovery Activities for this opportunity</inlineHelpText>
        <label>Discovery Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_End_Date__c</fullName>
        <inlineHelpText>REQUIRED - The date when you finished the last Discovery Activity</inlineHelpText>
        <label>Discovery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Start_Date__c</fullName>
        <inlineHelpText>REQUIRED - The date when you started to work on Discovery Activities</inlineHelpText>
        <label>Discovery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Closed_Date__c</fullName>
        <description>initially Expected close date comes from Opportunity</description>
        <label>Expected Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Discovery_Start__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FunctionalUseCase__c</fullName>
        <inlineHelpText>Select the standard functional use cases for this opportunity</inlineHelpText>
        <label>FunctionalUseCase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound: Connect Voice Interaction to right resource</fullName>
                </value>
                <value>
                    <fullName>Inbound: Personalized &amp; Value based Voice routing</fullName>
                </value>
                <value>
                    <fullName>Inbound: Dynamic Voice Call Back</fullName>
                </value>
                <value>
                    <fullName>Inbound: Access Experts across the enterprise with Skype for Business</fullName>
                </value>
                <value>
                    <fullName>Inbound: Increase NPS while Managing Urgent Conversations</fullName>
                </value>
                <value>
                    <fullName>Inbound: Extend Mobile to Video Calls</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Effective Identification and Validation in IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Payment Capture in IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Personalized IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Extend IVR to Visual IVR</fullName>
                </value>
                <value>
                    <fullName>Outbound: Improve Telesales Success by Moving Beyond Cold Calling</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactively keep customers informed via SMS notifications</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactively keep customers informed via multi-channel with Preference management</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactive contact based on customer context and journey</fullName>
                </value>
                <value>
                    <fullName>Outbound: Accelerate Payments Collected Using Multiple Channels</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interactions to Right Resources - E-mail</fullName>
                </value>
                <value>
                    <fullName>Digital: Automated Response Based on Content Analysis</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interaction to Right Resource - Chat</fullName>
                </value>
                <value>
                    <fullName>Digital: Implement Social Media in Your Contact Center</fullName>
                </value>
                <value>
                    <fullName>Digital: Personalized (cross-channel context) &amp; Value Based Routing for Digital Channels</fullName>
                </value>
                <value>
                    <fullName>Digital: Enable Intelligent Click-to-Call Option for Your Website or App</fullName>
                </value>
                <value>
                    <fullName>Digital: Enable Callback Option for Your Website or App</fullName>
                </value>
                <value>
                    <fullName>Digital: Monitor Customer Behavior on Your Website</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Chat for Sales</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Engagement with Chat or Callback</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Live Assistance Across any Channel</fullName>
                </value>
                <value>
                    <fullName>Digital: Offer Voice or Chat Support for Web Co-browse Experience</fullName>
                </value>
                <value>
                    <fullName>Digital: Implement Knowledge Base Access for Self and Agent Assisted Interactions</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interactions to Right Resource - SMS</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization: Optimize agent utilization for voice interactions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FunctionalUsecasesNumbers__c</fullName>
        <label>FunctionalUsecasesNumbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_Level_Request_details__c</fullName>
        <inlineHelpText>REQUIRED - Detail the pre-sales activity being requested and the specific desired objective. Example activities - CX Safari, Vision Clip (Video Use case creation), CX Discovery (Service Design Journey Mapping), SC Contact Center Discovery (1day).</inlineHelpText>
        <label>High Level Request details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_SC_Engagement__c</fullName>
        <inlineHelpText>Example text input for minimum size of text fields:
We used the WoW Methodology to structure a holistic consultative approach to the needs Ralph Lauren identified in their RFP.  By mapping our own actual customer journey through the Ralph Lauren website,</inlineHelpText>
        <label>Impact SC Engagement</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Kick_Off_Date__c</fullName>
        <inlineHelpText>Enter the date of the internal Kick-Off with PS</inlineHelpText>
        <label>Transition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsBCOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBCOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSEOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSEOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Functional_Use_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predefined Use Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyTempId__c</fullName>
        <label>Legacy Temp Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Temp_Id__c</fullName>
        <description>To hold the solution design id</description>
        <label>Legacy Temp Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned_Feedback__c</fullName>
        <inlineHelpText>REQUIRED - Please enter and lessons learned and feedback to the Center of Excellence</inlineHelpText>
        <label>Lessons Learned/Feedback</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opp_Annual_Contract_Value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Annual_Contract_Value_new__c</fullName>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Estimated_Usage_Agreements_EUA__c</fullName>
        <label>Estimated Usage Agreements (EUA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Genesys_Care_Amount__c</fullName>
        <label>Genesys Care Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Hardware_Total__c</fullName>
        <label>Hardware (Business Edition -Premise)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_License_Amount__c</fullName>
        <label>License Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_License_Equivalency__c</fullName>
        <label>License Equivalency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Monthly_Commitment__c</fullName>
        <label>Committed Monthly Recurring Rev (CMRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Potential_Pipeline__c</fullName>
        <label>Potential Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Professional_Service_Amount_RDP__c</fullName>
        <label>Professional Service Amount (RDP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Term_License_Amount_TCV__c</fullName>
        <label>Term License Amount (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Term_License__c</fullName>
        <label>Term License Amount (ACV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Total_Annual_Contract_Value__c</fullName>
        <label>Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Total_PS_Support__c</fullName>
        <label>Professional Services-Cloud</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_15_digit_ID__c</fullName>
        <formula>Opportunity_Id__r.X18_Digit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity 15 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Each WoW request will be associated with one opportunity</description>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Wow_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>text(Opportunity_Id__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SC_Engagement_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_transition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Customer_Aware_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Customer Aware Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <description>Platform comes from opportunity</description>
        <label>Platform Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predefined_Architecture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predefined Architecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Objectives__c</fullName>
        <label>Key Business Objectives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provide Consistent OmniChannel Experience</fullName>
                </value>
                <value>
                    <fullName>Increase First Contact Resolution</fullName>
                </value>
                <value>
                    <fullName>Proactively Keep Customers Informed</fullName>
                </value>
                <value>
                    <fullName>Improve Online Sales Completion</fullName>
                </value>
                <value>
                    <fullName>Improve Online Service and Support</fullName>
                </value>
                <value>
                    <fullName>Manage Customer Interactions Efficiently</fullName>
                </value>
                <value>
                    <fullName>Reduce Workforce Planning Inefficiencies and Costs</fullName>
                </value>
                <value>
                    <fullName>Improve Agent Effectiveness and Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Improve Employee and Contact Center/Service Performance</fullName>
                </value>
                <value>
                    <fullName>Distribute non real-time business tasks efficiently</fullName>
                </value>
                <value>
                    <fullName>Meet Regulatory Requirements</fullName>
                </value>
                <value>
                    <fullName>Increase Payment and Collections Rates</fullName>
                </value>
                <value>
                    <fullName>Replace complex, old and failing technology and suppliers</fullName>
                </value>
                <value>
                    <fullName>Improve outbound, sales and marketing effectiveness</fullName>
                </value>
                <value>
                    <fullName>Gather Customer Experience Insights</fullName>
                </value>
                <value>
                    <fullName>Add on Seats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>SC Engagement Form</relationshipLabel>
        <relationshipName>SC_Engagement_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Solution__c</fullName>
        <description>Primary Solution from Opportunity</description>
        <label>Primary Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Completed_Date__c</fullName>
        <label>RFP Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Due_date__c</fullName>
        <label>RFP Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Received_Date__c</fullName>
        <label>RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_Status__c</fullName>
        <description>if WoW status is rejected then it will be mandatory to fill</description>
        <label>Rejected Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Sales Engagement Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Form2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution Engineer</description>
        <label>Solution Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMART_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMART Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description_of_RFP__c</fullName>
        <label>Short Description of RFP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Store the stage from opportunity</description>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Profile_Acknowledgement_Date__c</fullName>
        <label>Technical Profile Acknowledgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Profile_Score__c</fullName>
        <formula>Technical_Profile__r.Score1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Profile Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Profile</label>
        <referenceTo>Technical_Profile__c</referenceTo>
        <relationshipLabel>SC Engagement Form</relationshipLabel>
        <relationshipName>SC_Engagement_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Lead_SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>use to store the lead id for Batch Lead SLA</description>
        <label>Temp Lead SLA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Temp_Lead_SLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store Queue Lead temporary for VF mail template</description>
        <label>Temp Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wow_Request_Temp_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total amount comes from Opportunity</description>
        <label>Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transition_End_Date__c</fullName>
        <label>Transition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Design__c</fullName>
        <label>Type of Design</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Engagement – CX Assessment</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Discovery__c</fullName>
        <inlineHelpText>REQUIRED - Select the type of activitie(s) performed</inlineHelpText>
        <label>Discovery Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CX Safari</fullName>
                </value>
                <value>
                    <fullName>CC Visit</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Employee Engagement</fullName>
                </value>
                <value>
                    <fullName>Business Optimization</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Assessment</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement - CX Discovery</fullName>
                    <isActive>false</isActive>
                    <label>Customer Engagement - CX Discovery</label>
                </value>
                <value>
                    <fullName>Customer Engagement – CX Safari</fullName>
                    <isActive>false</isActive>
                    <label>Customer Engagement – CX Safari</label>
                </value>
                <value>
                    <fullName>Generic</fullName>
                    <isActive>false</isActive>
                    <label>Generic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Webnier__c</fullName>
        <label>URL Webnier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VirtualTeamMembers__c</fullName>
        <label>VirtualTeamMembers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VirtualUserCount__c</fullName>
        <label>VirtualUserCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisionStartDate__c</fullName>
        <label>Vision Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Activity__c</fullName>
        <inlineHelpText>REQUIRED - Select the type of activitie(s) performed</inlineHelpText>
        <label>Vision Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision Clip (Add Link)</fullName>
                </value>
                <value>
                    <fullName>Vision Presentation (Attach Document)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Stage_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you have performed Vision Activities for this opportunity</inlineHelpText>
        <label>Vision Stage Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Start_Date__c</fullName>
        <inlineHelpText>REQUIRED - Enter the date when the last activity of the Vision Stage was finished</inlineHelpText>
        <label>Vision End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_Provides_Design__c</fullName>
        <inlineHelpText>REQUIRED - Select which party provided the architecture design for this opportunity and whether it was reviewed by Genesys</inlineHelpText>
        <label>Who Provides Design</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer with Genesys review</fullName>
                </value>
                <value>
                    <fullName>Partner with Genesys review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WoW_Status__c</fullName>
        <label>SC Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open and Not Assigned</fullName>
                </value>
                <value>
                    <fullName>Open and Assigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>SC Status Submitted for Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wow_URL__c</fullName>
        <formula>HYPERLINK(&quot;/apex/wow_Request_Form?id=&quot;&amp;Opportunity_Id__c, Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC Engagement URL</label>
        <type>Text</type>
    </fields>
    <label>SC Engagement Form</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Engagement Form</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>AE__c</fullName>
        <label>AE</label>
    </sharingReasons>
</CustomObject>